@@ -18,6 +18,11 @@ rootskel (1.80) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * On GNU/kFreeBSD, mount fdescfs at boot time and set the default 
     module path. Depends on freebsd-utils-udeb (for sysctl).
+  * Add src/lib/debian-installer.d/S40term-kfreebsd in order to mute the
+    console on GNU/kFreeBSD.
+
+  [ Luca Favatella ]
+  * src/lib/debian-installer.d/Makefile: generalize S40term handling.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 14 Jul 2009 15:43:38 +0100
 
